--- a/Languages/Russian/DefInjected/ThingDef/Races_Animal_Exotic.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Races_Animal_Exotic.xml
@@ -1,11 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
+  <GG.label>Ожившая статуя</GG.label>
+  <GG.description>Ожившая статуя Грини,очень общительная.</GG.description>
+  <GG.tools.0.label>Голова</GG.tools.0.label>
+
+  <reaper.label>Жнец</reaper.label>
+  <reaper.description>Кто то надругался над хомячком превратив его в ужасного жнеца ,берегитесь яда.</reaper.description>
+  <reaper.tools.1.label>Left paw</reaper.tools.1.label>
+  <reaper.tools.2.label>Right paw</reaper.tools.2.label>
+  <reaper.tools.4.label>head</reaper.tools.4.label>
+
   <KirinAncient.label>Древний кирин</KirinAncient.label>
   <KirinAncient.description>Мистическое существо рожденное изо льда, Кирин несет стужу и холод. Душа этого существа высоко ценится за свои свойства на рынках римворлда.</KirinAncient.description>
+  <KirinAncient.tools.0.label>Left paw</KirinAncient.tools.0.label>
   <KirinAncient.tools.1.label>Right paw</KirinAncient.tools.1.label>
-  <KirinAncient.tools.2.label>Right paw</KirinAncient.tools.2.label>
-  <KirinAncient.tools.4.label>head</KirinAncient.tools.4.label>
+  <KirinAncient.tools.3.label>head</KirinAncient.tools.3.label>
 
   <GreenWyvernAncient.label> Древняя зелёная виверна</GreenWyvernAncient.label>
   <GreenWyvernAncient.description>Большое, драконоподобное существонекогда бывшее  зелёного цвета. В отличие от драконов, виверны способны на полёт с помощью своих видоизмененных предплечий, а не ярко выраженных крыльев.</GreenWyvernAncient.description>
@@ -19,14 +29,8 @@
   <BehirAncient.tools.1.label>Right claw</BehirAncient.tools.1.label>
   <BehirAncient.tools.3.label>head</BehirAncient.tools.3.label>
 
-  <reaper.label>Жнец</reaper.label>
-  <reaper.description>Кто то надругался над хомячком превратив его в ужасного жнеца ,берегитесь яда.</reaper.description>
-  <reaper.tools.1.label>Left paw</reaper.tools.1.label>
-  <reaper.tools.2.label>Right paw</reaper.tools.2.label>
-  <reaper.tools.4.label>head</reaper.tools.4.label>
 
-  <GG.label>Ожившая статуя</GG.label>
-  <GG.description>Ожившая статуя Грини,очень общительная.</GG.description>
-  <GG.tools.0.label>Голова</GG.tools.0.label>
+  <!--<KirinAncient.tools.2.label>Right paw</KirinAncient.tools.2.label>-->
+  <!--<KirinAncient.tools.4.label>head</KirinAncient.tools.4.label>-->
 
 </LanguageData>
