--- a/Languages/Russian/DefInjected/ThingCategoryDef/152mmHowitzer.xml
+++ b/Languages/Russian/DefInjected/ThingCategoryDef/152mmHowitzer.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <Ammo152mmCannonShells.label>152mm howitzer shell</Ammo152mmCannonShells.label>
+  <Ammo152mmCannonShells.label>152-мм  снаряды гаубицы</Ammo152mmCannonShells.label>
 
 
 </LanguageData>
