--- a/Languages/Russian/DefInjected/RecipeDef/152mmHowitzer.xml
+++ b/Languages/Russian/DefInjected/RecipeDef/152mmHowitzer.xml
@@ -11,13 +11,13 @@
   <MakeAmmo_152mmHowitzerShell_EMP.description>Создавайте снаряды для 152-мм ЭМИ-гаубиц.</MakeAmmo_152mmHowitzerShell_EMP.description>
   <MakeAmmo_152mmHowitzerShell_EMP.jobString>Изготовление снарядов для 152-мм ЭМИ-гаубиц.</MakeAmmo_152mmHowitzerShell_EMP.jobString>
 
-  <MakeAmmo_152mmHowitzerShell_sen.label>изготовить пенные 152-мм снаряды для гаубиц x3</MakeAmmo_152mmHowitzerShell_sen.label>
-  <MakeAmmo_152mmHowitzerShell_sen.description>Изготовить пенные снаряды для 152-мм гаубиц.</MakeAmmo_152mmHowitzerShell_sen.description>
-  <MakeAmmo_152mmHowitzerShell_sen.jobString>Изготовление снарядов для 152-мм гаубицы «пенные».</MakeAmmo_152mmHowitzerShell_sen.jobString>
-
   <MakeAmmo_152mmHowitzerShell_Bio.label>изготовить химичиские 152-мм снаряды для гаубиц  x3</MakeAmmo_152mmHowitzerShell_Bio.label>
   <MakeAmmo_152mmHowitzerShell_Bio.description>Изготовить химичиские снаряды для 152-мм гаубиц .</MakeAmmo_152mmHowitzerShell_Bio.description>
   <MakeAmmo_152mmHowitzerShell_Bio.jobString>Изготовление снарядов для 152-мм гаубицы «химичиские».</MakeAmmo_152mmHowitzerShell_Bio.jobString>
 
+
+  <!--<MakeAmmo_152mmHowitzerShell_sen.label>изготовить пенные 152-мм снаряды для гаубиц x3</MakeAmmo_152mmHowitzerShell_sen.label>-->
+  <!--<MakeAmmo_152mmHowitzerShell_sen.description>Изготовить пенные снаряды для 152-мм гаубиц.</MakeAmmo_152mmHowitzerShell_sen.description>-->
+  <!--<MakeAmmo_152mmHowitzerShell_sen.jobString>Изготовление снарядов для 152-мм гаубицы «пенные».</MakeAmmo_152mmHowitzerShell_sen.jobString>-->
 
 </LanguageData>
