--- a/Languages/Russian/DefInjected/ThingDef/152mmHowitzer.xml
+++ b/Languages/Russian/DefInjected/ThingDef/152mmHowitzer.xml
@@ -12,16 +12,16 @@
   <Ammo_152mmHowitzerShell_Bio.label>152mm  химичиские снаряды для гаубиц.</Ammo_152mmHowitzerShell_Bio.label>
   <Ammo_152mmHowitzerShell_Bio.description>152 mm (6.1")  химичиские снаряды для гаубиц.</Ammo_152mmHowitzerShell_Bio.description>
 
-  <Ammo_152mmHowitzerShell_sen.label>152mm  пенные снаряды для гаубиц</Ammo_152mmHowitzerShell_sen.label>
-  <Ammo_152mmHowitzerShell_sen.description>152 mm (6.1") пенные снаряды для гаубиц.</Ammo_152mmHowitzerShell_sen.description>
-
 
   <!-- Projectiles -->
 
   <Bullet_152mmHowitzerShell_HE.label>152mm осколочно-фугасные снаряды (HE)</Bullet_152mmHowitzerShell_HE.label>
   <Bullet_152mmHowitzerShell_EMP.label>152mm снаряды  ЭМИ (EMP)</Bullet_152mmHowitzerShell_EMP.label>
   <Bullet_152mmHowitzerShell_Bio.label>152mm химичиские снаряды (Bio)</Bullet_152mmHowitzerShell_Bio.label>
-  <Bullet_152mmHowitzerShell_sen.label>152mm пенные (песок)</Bullet_152mmHowitzerShell_sen.label>
 
+
+  <!--<Ammo_152mmHowitzerShell_sen.label>152mm  пенные снаряды для гаубиц</Ammo_152mmHowitzerShell_sen.label>-->
+  <!--<Ammo_152mmHowitzerShell_sen.description>152 mm (6.1") пенные снаряды для гаубиц.</Ammo_152mmHowitzerShell_sen.description>-->
+  <!--<Bullet_152mmHowitzerShell_sen.label>152mm пенные (песок)</Bullet_152mmHowitzerShell_sen.label>-->
 
 </LanguageData>
