--- a/Languages/Russian/DefInjected/ThingDef/Buildings_Power.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Buildings_Power.xml
@@ -10,7 +10,7 @@
   <YadaritAINPoweredGenerator.label>Прототип генератора Q297</YadaritAINPoweredGenerator.label>
   <YadaritAINPoweredGenerator.description>Генератор Ядарита что выведен на полную мощность, Созерцание сгорания топлива может вызвать привыкание, лучевую болезнь или беременность, перед постройкой проконсультируйтесь с доктором.(ВНИМАНИЕ !!! ПАРЫ СГОРАЮЩЕГО ЯДАРИТА МОГУТ ВЫЗЫВАТЬ ОЖОГИ !!!)</YadaritAINPoweredGenerator.description>
 
-  <ShildGenerator.label>Shild plant</ShildGenerator.label>
+  <ShildGenerator.label>Прототип щита</ShildGenerator.label>
   <ShildGenerator.description>Прототип щита, что закрывает небольшую области, питается от ядра ядарита . При длительной работе  требуется отключение для охлаждения</ShildGenerator.description>
 
 
