--- a/Languages/Russian/DefInjected/ThingDef/TechResources.xml
+++ b/Languages/Russian/DefInjected/ThingDef/TechResources.xml
@@ -7,5 +7,8 @@
   <YadareCell.label>Ядарит Ядро</YadareCell.label>
   <YadareCell.description>Компактный аккумулятор Ядарита, благодаря специфике, может использоваться в устройствах с высоким энергопотреблением(Хранить в экранированом помещении вдали от людей).</YadareCell.description>
 
+  <SealOfPurity.label>Печать Чистоты</SealOfPurity.label>
+  <SealOfPurity.description>Печать Чистоты используется Имперскими воинами. Она наносится на оружие, доспехи и транспортные средства. Печать чистоты представляет собой восковую печать, которой закреплен пергамент с надписями и молитвами. Обычно печать чистоты наносится на видное место на броне и символизирует, что владелец не несет на себе ни малейшей скверны Хаоса</SealOfPurity.description>
+
 
 </LanguageData>
