--- a/Languages/Russian/DefInjected/ThingDef/Weapons_Pistols.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Weapons_Pistols.xml
@@ -7,4 +7,10 @@
   <Bolt_Pistol.description>Болт-пистолет - пистолетная версия болтера. Его размеры позволяют использовать его обычным людям. Чаще всего используется у Космодесанта, Сестер Битвы, офицеров и комиссаров Имперской Гвардии, Инквизиции и как средство самообороны. Стандартный магазин болт-пистолета вмещает от 6 до 12 патронов.</Bolt_Pistol.description>
 
 
+  <!-- SmithWesson M1917 -->
+
+  <Gun_PlasmaFox.label>Ярость Лиса</Gun_PlasmaFox.label>
+  <Gun_PlasmaFox.description>,,Полярный лис передаёт привет,,Гласит гравировка на оружии ,именная модель плазменного пистолета разработанная по спец заказу(Крафт невозможен).</Gun_PlasmaFox.description>
+
+
 </LanguageData>
