--- a/Languages/Russian/DefInjected/HediffDef/BodyParts_Bionic.xml
+++ b/Languages/Russian/DefInjected/HediffDef/BodyParts_Bionic.xml
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <mechandrid.label>Механдрит</mechandrid.label>
+  <mechandrid.label>Механодендрит</mechandrid.label>
   <mechandrid.description>«Нет истины в плоти, только предательство.
 Нет силы в плоти, только слабость.
 Нет постоянства в плоти, только распад.
 Нет определённости во плоти, только смерть.»</mechandrid.description>
-  <mechandrid.labelNoun>Механдрит</mechandrid.labelNoun>
+  <mechandrid.labelNoun>Механодендрит</mechandrid.labelNoun>
 
 
   <!-- Bionic arm -->
