--- a/Languages/Russian/DefInjected/ThingDef/Bilding_Traps.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Bilding_Traps.xml
@@ -7,5 +7,8 @@
   <Drob.label>Двуствольная турель с дробовиком</Drob.label>
   <Drob.description>Эта автоматическая электрическая двуствольная турель с дробовиком открывает огонь и нейтрализует любые движущиеся объекты в зоне досягаемости. Вы должны снарядить ее  соответствующими патронами(12.)</Drob.description>
 
+  <Turret_Arr.label>«Тихарь»</Turret_Arr.label>
+  <Turret_Arr.description>«Тихарь» — пневматическое, мультикомпрессионное оружие . Оснащен встроенным в приклад баллоном со сжатым воздухом, насосом поршневого типа и манометром давления.</Turret_Arr.description>
+
 
 </LanguageData>
