--- a/Languages/Russian/DefInjected/RecipeDef/Recipes_Weapons_Pistols.xml
+++ b/Languages/Russian/DefInjected/RecipeDef/Recipes_Weapons_Pistols.xml
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
+  <Build_Bolt_Pistol.label>Build Bolt Pistol</Build_Bolt_Pistol.label>
+  <Build_Bolt_Pistol.description>Builds a Bolt Pistol. Accurate at short range only.  Moderately damaging with a short aim and cooldown period.\nCaliber: .45 ACP</Build_Bolt_Pistol.description>
+  <Build_Bolt_Pistol.jobString>Building Bolt Pistol.</Build_Bolt_Pistol.jobString>
+
+
   <!--<Build_Bolt_Pistol.label>Сделать Болт пистолет</Build_Bolt_Pistol.label>-->
   <!--<Build_Bolt_Pistol.description>Болт-пистолет - пистолетная версия болтера.</Build_Bolt_Pistol.description>-->
   <!--<Build_Bolt_Pistol.jobString>Создание Болт пистолета</Build_Bolt_Pistol.jobString>-->
-
 
 </LanguageData>
