old generator and toolbox

--- a/Languages/Russian/DefInjected/ThingDef/Buildings_Power.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Buildings_Power.xml
@@ -13,5 +13,8 @@
   <ShildGenerator.label>Прототип щита</ShildGenerator.label>
   <ShildGenerator.description>Прототип щита, что закрывает небольшую области, питается от ядра ядарита . При длительной работе  требуется отключение для охлаждения</ShildGenerator.description>
 
+  <AIGenerator.label>Старый генератор</AIGenerator.label>
+  <AIGenerator.description>Очень старый генератор, что пережил войну и суровые испытания временем. Хоть его лучшие годы давно позади, но хороший техник способен выжать с данной машинки ещё крохи энергии. Для обслуживания нужны редкие запчасти, что возможно сохранились на древних складах или у торговцев. Порой встречаются модели, что способны обеспечить светом маленькую колонию.</AIGenerator.description>
+
 
 </LanguageData>
