--- a/Languages/Russian/DefInjected/ThingDef/TechResources.xml
+++ b/Languages/Russian/DefInjected/ThingDef/TechResources.xml
@@ -10,5 +10,8 @@
   <SealOfPurity.label>Печать Чистоты</SealOfPurity.label>
   <SealOfPurity.description>Печать Чистоты используется Имперскими воинами. Она наносится на оружие, доспехи и транспортные средства. Печать чистоты представляет собой восковую печать, которой закреплен пергамент с надписями и молитвами. Обычно печать чистоты наносится на видное место на броне и символизирует, что владелец не несет на себе ни малейшей скверны Хаоса</SealOfPurity.description>
 
+  <Toolbox.label>Инструментальный ящик</Toolbox.label>
+  <Toolbox.description>Небольшой ящик наполненный инструментами и расходниками для обслуживания генераторов , увы время привела в негодность часть набора</Toolbox.description>
+
 
 </LanguageData>
