--- a/Languages/Russian/DefInjected/ThingDef/Buildings_Accessories.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Buildings_Accessories.xml
@@ -4,5 +4,8 @@
   <YadaritLamp.label>Лампа с Кристалом ядарита</YadaritLamp.label>
   <YadaritLamp.description>Красивая лампа с кусочками Ядарита и светокамня, даёт много рассеянного света.</YadaritLamp.description>
 
+  <LLamp.label>Керосиноовая лампа</LLamp.label>
+  <LLamp.description>Светильник, работающий на основе сгорания керосина.Но после широкого внедрения электрического освещения керосиновые лампы используются в основном там, где нет электричества, в качестве аварийных на случай отключения электроэнергии, а также туристами.</LLamp.description>
+
 
 </LanguageData>
