--- a/Languages/Russian/DefInjected/ThingDef/Balls.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Balls.xml
@@ -6,10 +6,14 @@
   <Ammo_Balls.label>15-миллиметровые стальные шарики</Ammo_Balls.label>
   <Ammo_Balls.description>Шарики из подшипников благодаря идеальной обработке и распространённости стали идеальным боеприпасом для некоторых кустарных видов оружия.</Ammo_Balls.description>
 
+  <Ammo_Balls_YA.label>15-миллиметровые стальные шарики облучённые ядаритом</Ammo_Balls_YA.label>
+  <Ammo_Balls_YA.description>Шарики что были подверженны сильному излучению от концентрированого Ядарита.Увеличенная пробивная способность а также высокая токсичность боеприпасов делают даже пневматичискую винтовку очень грозным оружием</Ammo_Balls_YA.description>
+
 
   <!-- Projectiles -->
 
   <Balls.label>15-миллиметровые стальные шарики</Balls.label>
+  <Balls_YA.label>15-миллиметровые стальные шарики облучённые ядаритом</Balls_YA.label>
 
 
 </LanguageData>
