--- a/Languages/Russian/DefInjected/HediffDef/YadaritInhibit.xml
+++ b/Languages/Russian/DefInjected/HediffDef/YadaritInhibit.xml
@@ -3,7 +3,7 @@
 
   <YadaritInhibitConsumed.label>Ингибитор Х0-74</YadaritInhibitConsumed.label>
   <YadaritInhibitConsumed.description>Прототип препарата что позволяет кратковременно невилировать вредные соединения изотопа ХО-74/А2.</YadaritInhibitConsumed.description>
-  <YadaritInhibitConsumed.stages.1.label>Ингибитор купирует вредоносное воздействие Ядарита</YadaritInhibitConsumed.stages.1.label>
+  <YadaritInhibitConsumed.stages.1.label>Ингибитор нейтрализует вредоносное воздействие Ядарита</YadaritInhibitConsumed.stages.1.label>
 
 
 </LanguageData>
