--- a/Languages/Russian/DefInjected/ResearchTabDef/ResearchProjects.xml
+++ b/Languages/Russian/DefInjected/ResearchTabDef/ResearchProjects.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <YadaritTech.label>Ядарит технологии</YadaritTech.label>
+  <YadaritTech.label>Технологии синтеза Ядарита</YadaritTech.label>
 
 
 </LanguageData>
