--- a/Languages/Russian/DefInjected/HediffDef/YadaritInhibit.xml
+++ b/Languages/Russian/DefInjected/HediffDef/YadaritInhibit.xml
@@ -5,5 +5,8 @@
   <YadaritInhibitConsumed.description>Прототип препарата что позволяет кратковременно невилировать вредные соединения изотопа ХО-74/А2.</YadaritInhibitConsumed.description>
   <YadaritInhibitConsumed.stages.1.label>Ингибитор нейтрализует вредоносное воздействие Ядарита</YadaritInhibitConsumed.stages.1.label>
 
+  <EggGoldConsumed.label>Золотые яйца Кукухи</EggGoldConsumed.label>
+  <EggGoldConsumed.description>Велечайший дар кукухи что были дарованы только избранным!</EggGoldConsumed.description>
+
 
 </LanguageData>
