--- a/Languages/Russian/DefInjected/ThingDef/YadaritInhibit.xml
+++ b/Languages/Russian/DefInjected/ThingDef/YadaritInhibit.xml
@@ -4,5 +4,8 @@
   <YadaritInhibit.label>Ингибитор Х0-74</YadaritInhibit.label>
   <YadaritInhibit.description>Прототип препарата что позволяет кратковременно невилировать вредные соединения изотопа ХО-74/А2.Препарат не был испытан на людях - применять на свой страх и риск.Предположительное действия ингибитора 1-3х дней.</YadaritInhibit.description>
 
+  <EggGold.label>Золотые яйца Кукухи</EggGold.label>
+  <EggGold.description>Велечайший дар кукухи что были дарованы только избранным.Поговаривают что у Чингисхана было аж 3 яйца</EggGold.description>
+
 
 </LanguageData>
