Tears_of_Enemies

--- a/Languages/Russian/DefInjected/ThingDef/Filth_Various.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Filth_Various.xml
@@ -3,6 +3,6 @@
 
   
   <Filth_Yadarit.label>Споры Ядарита</Filth_Yadarit.label>
- 
+ <Tears_of_Enemies.label>Слёзы врагов</Tears_of_Enemies.label>
 
 </LanguageData>
