--- a/Languages/Russian/DefInjected/HediffDef/HediffDefs_Yadarit.xml
+++ b/Languages/Russian/DefInjected/HediffDef/HediffDefs_Yadarit.xml
@@ -8,8 +8,10 @@
   <YadaritP.stages.2.label>Прогрессирующая форма облучения.Возникновение нарушений наружных слоев кожи ,резкое ухудшение самочувствия.</YadaritP.stages.2.label>
   <YadaritP.stages.3.label>Средняя форма облучения .Многочисленные повреждения организма.Требуется применения специальных препаратов для невелирования изотопов ядарита в теле.</YadaritP.stages.3.label>
   <YadaritP.stages.4.label>Тяжелая форма облучения .Поражение структуры ЦНС и разрушение красных кровяных клеток,Хаотичное деление Е2 клеток</YadaritP.stages.4.label>
-  <YadaritP.stages.5.label>Смертельная форма облучения .Поражено более 70% организма,Из Е2 клеток формируются грибницы Ядарита.Проростая сквозь кожу ,тело используется как инкубатор.Рекомендуется быстрое устранение пациента и стерилизация помещения для предотвращения распространения спор.</YadaritP.stages.5.label>
+  <YadaritP.stages.5.label>Критичиская форма облучения .Изменение метаболизма ,разрушение органов,измениние алгоритмов поведения клеток тела</YadaritP.stages.5.label>
   <YadaritP.labelNoun>Распад ядарита</YadaritP.labelNoun>
 
+
+  <!--<YadaritP.stages.6.label>Смертельная форма облучения .Поражено более 70% организма,Из Е2 клеток формируются грибницы Ядарита.Проростая сквозь кожу ,тело используется как инкубатор.Рекомендуется быстрое устранение пациента и стерилизация помещения для предотвращения распространения спор.</YadaritP.stages.6.label>-->
 
 </LanguageData>
