--- a/Languages/Russian/DefInjected/ThingDef/Balls.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Balls.xml
@@ -7,7 +7,7 @@
   <Ammo_Balls.description>Шарики из подшипников благодаря идеальной обработке и распространённости стали идеальным боеприпасом для некоторых кустарных видов оружия.</Ammo_Balls.description>
 
   <Ammo_Balls_YA.label>15-миллиметровые стальные шарики облучённые ядаритом</Ammo_Balls_YA.label>
-  <Ammo_Balls_YA.description>Шарики что были подверженны сильному излучению от концентрированого Ядарита.Увеличенная пробивная способность а также высокая токсичность боеприпасов делают даже пневматичискую винтовку очень грозным оружием</Ammo_Balls_YA.description>
+  <Ammo_Balls_YA.description>Шарики что были подверженны сильному излучению от концентрированого Ядарита.Увеличенная пробивная способность а также высокая токсичность боеприпасов делают даже пневматичискую винтовку очень грозным оружием.После облучения масса снаряда значительно изменяется , снаряд окутывает свечение Ядарита .Попадение снаряда может уничтожить экипировку!!!</Ammo_Balls_YA.description>
 
 
   <!-- Projectiles -->
