--- a/Languages/Russian/DefInjected/ThingCategoryDef/81mmMortar.xml
+++ b/Languages/Russian/DefInjected/ThingCategoryDef/81mmMortar.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <Ammo81mmMortarShells.label>81mm mortar shell</Ammo81mmMortarShells.label>
+  <Ammo81mmMortarShells.label>81 мм Снаряды Миномёта</Ammo81mmMortarShells.label>
 
 
 </LanguageData>
