--- a/Languages/Russian/DefInjected/ThingDef/BodyParts_Bionic.xml
+++ b/Languages/Russian/DefInjected/ThingDef/BodyParts_Bionic.xml
@@ -7,8 +7,8 @@
 
   <!-- Bionic arm -->
 
-  <tent.label>Бионическая Тентакля</tent.label>
-  <tent.description>Инструмент что крайне полезен в быту</tent.description>
+  <tent.label>Тентакля</tent.label>
+  <tent.description>Инструмент что крайне полезен в быту, дар Культа</tent.description>
 
   <FrozenHeart.label>Ядро холода</FrozenHeart.label>
   <FrozenHeart.description>Холодное на ощупь, и от него идет пар. Именно из таких сердец и появляются ледяные элементали, на родине их называют «Снеговики»</FrozenHeart.description>
