--- a/Languages/Russian/DefInjected/ThingDef/Weapons_Turrets_Sentry.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Weapons_Turrets_Sentry.xml
@@ -12,6 +12,9 @@
   <Gun_AAA.label>«Тихарь»</Gun_AAA.label>
   <Gun_AAA.description>«Тихарь» — пневматическое, мультикомпрессионное оружие . Оснащен встроенным в приклад баллоном со сжатым воздухом, насосом поршневого типа и манометром давления.</Gun_AAA.description>
 
+  <Gun_Radio.label>Прототип Ядарит излучателя</Gun_Radio.label>
+  <Gun_Radio.description>Прототип Излучателя .Благодаря прорыву в Ядарит технологии удалось создать сфокусированый луч ядарит излучения.Для инициализации реакции в камере Вильсона , перед выстрелом следуетпоместить Ядарит стержни и подать на них разряд высокой частоты...</Gun_Radio.description>
+
 
   <!--<Gun_ArtTurret.label>152mm артиллерия</Gun_ArtTurret.label>-->
   <!--<Gun_ArtTurret.description>152mm артиллерия, вооруженная гаубицами и предназначенная для поражения открытых и укрытых целей, а также для разрушения полевых оборонительных сооружений. Наличие артиллерийских выстрелов раздельного заряжания обеспечивает возможность широкого маневра траекториями.</Gun_ArtTurret.description>-->
