--- a/Languages/Russian/DefInjected/ThingDef/Buildings_Power.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Buildings_Power.xml
@@ -5,10 +5,10 @@
   <YadaritVolgerGenerator.description>Портативный генератор – устройство, которое обеспечивает подачу электричества в местах, где отсутствует электросеть.  В комплект также входит встроенный аккумулятор небольшой ёмкости.</YadaritVolgerGenerator.description>
 
   <YadaritPoweredGenerator.label>Прототип генератора GS1</YadaritPoweredGenerator.label>
-  <YadaritPoweredGenerator.description>Генератор Ядарита что выведен на частичную мощность, Созерцание сгорания топлива может вызвать привыкание, лучевую болезнь или беременность, перед постройкой проконсультируйтесь с доктором.(ВНИМАНИЕ !!! ПАРЫ СГОРАЮЩЕГО ЯДАРИТА МОГУТ ВЫЗЫВАТЬ ОЖОГИ !!!).</YadaritPoweredGenerator.description>
+  <YadaritPoweredGenerator.description>Генератор Ядарита что выведен на частичную мощность, Созерцание сгорания топлива может вызвать привыкание, лучевую болезнь или беременность, перед постройкой проконсультируйтесь с доктором.(ВНИМАНИЕ !!! ПАРЫ СГОРАЮЩЕГО ЯДАРИТА МОГУТ ВЫЗЫВАТЬ ОБЛУЧЕНИЕ !!!).</YadaritPoweredGenerator.description>
 
   <YadaritAINPoweredGenerator.label>Прототип генератора Q297</YadaritAINPoweredGenerator.label>
-  <YadaritAINPoweredGenerator.description>Генератор Ядарита что выведен на полную мощность, Созерцание сгорания топлива может вызвать привыкание, лучевую болезнь или беременность, перед постройкой проконсультируйтесь с доктором.(ВНИМАНИЕ !!! ПАРЫ СГОРАЮЩЕГО ЯДАРИТА МОГУТ ВЫЗЫВАТЬ ОЖОГИ !!!)</YadaritAINPoweredGenerator.description>
+  <YadaritAINPoweredGenerator.description>Генератор Ядарита что выведен на полную мощность, Созерцание сгорания топлива может вызвать привыкание, лучевую болезнь или беременность, перед постройкой проконсультируйтесь с доктором.(ВНИМАНИЕ !!! ПАРЫ СГОРАЮЩЕГО ЯДАРИТА МОГУТ ВЫЗЫВАТЬ ОБЛУЧЕНИЕ !!!)</YadaritAINPoweredGenerator.description>
 
   <ShildGenerator.label>Прототип щита</ShildGenerator.label>
   <ShildGenerator.description>Прототип щита, что закрывает небольшую области, питается от ядра ядарита . При длительной работе  требуется отключение для охлаждения</ShildGenerator.description>
