--- a/Languages/Russian/DefInjected/HediffDef/HediffDefs_Yadarit.xml
+++ b/Languages/Russian/DefInjected/HediffDef/HediffDefs_Yadarit.xml
@@ -3,12 +3,12 @@
 
   <YadaritP.label>Поражение изотопом минерала Х0-74</YadaritP.label>
   <YadaritP.description>Поражение элементом Х0-74.</YadaritP.description>
-  <YadaritP.stages.0.label>Лёгкая форма облучения .Кратковременное облучение неопасно для жизни и работы организма.</YadaritP.stages.0.label>
-  <YadaritP.stages.1.label>Начальная форма облучения .Начинаются изменения на клеточном уровне,в клетках начинается синтез белков не свойственных человеку.</YadaritP.stages.1.label>
-  <YadaritP.stages.2.label>Прогрессирующая форма облучения.Возникновение нарушений наружных слоев кожи ,резкое ухудшение самочувствия.</YadaritP.stages.2.label>
-  <YadaritP.stages.3.label>Средняя форма облучения .Многочисленные повреждения организма.Требуется применения специальных препаратов для невелирования изотопов ядарита в теле.</YadaritP.stages.3.label>
-  <YadaritP.stages.4.label>Тяжелая форма облучения .Поражение структуры ЦНС и разрушение красных кровяных клеток,Хаотичное деление Е2 клеток</YadaritP.stages.4.label>
-  <YadaritP.stages.5.label>Критичиская форма облучения .Изменение метаболизма ,разрушение органов,измениние алгоритмов поведения клеток тела</YadaritP.stages.5.label>
+  <YadaritP.stages.0.label>Лёгкая форма облучения.</YadaritP.stages.0.label>
+  <YadaritP.stages.1.label>Начальная форма облучения.</YadaritP.stages.1.label>
+  <YadaritP.stages.2.label>Прогрессирующая форма облучения.</YadaritP.stages.2.label>
+  <YadaritP.stages.3.label>Средняя форма облучения.</YadaritP.stages.3.label>
+  <YadaritP.stages.4.label>Тяжелая форма облучения.</YadaritP.stages.4.label>
+  <YadaritP.stages.5.label>Критичиская форма облучения.</YadaritP.stages.5.label>
   <YadaritP.labelNoun>Распад ядарита</YadaritP.labelNoun>
 
   <Acid_Yadarit.label>Отравление тяжелыми металами Ядаритом</Acid_Yadarit.label>
