--- a/Languages/Russian/DefInjected/ThingDef/Bilding_Traps.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Bilding_Traps.xml
@@ -16,5 +16,9 @@
   <TrapIED_Yadarit.label>Взрывное устройство с Ядаритом</TrapIED_Yadarit.label>
   <TrapIED_Yadarit.description>Взрывное устройство с применением токсичного минерала</TrapIED_Yadarit.description>
 
+  <XBomb.label>X-01 Устройство</XBomb.label>
+  <XBomb.description>X-01 предназначенна для очисктки огромных областей от нежелательной биологической формы жизни.Может быть активирована как вручную так и удалёно(Радио-детонаром)</XBomb.description>
+  <XBomb.comps.0.useLabel>Нажать большую красную кнопку!</XBomb.comps.0.useLabel>
+
 
 </LanguageData>
