--- a/Languages/Russian/DefInjected/ThingDef/Balls.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Balls.xml
@@ -4,7 +4,10 @@
   <!-- Ammo -->
 
   <Ammo_Balls.label>15-миллиметровые стальные шарики</Ammo_Balls.label>
-  <Ammo_Balls.description>Шарики из подшипников благодаря идеальной обработке и распространённости стали идеальным боеприпасом для некоторых кустарных видов оружия.</Ammo_Balls.description>
+  <Ammo_Balls.description>Шарики из подшипников благодаря идеальной обработке и распространённости стали отличным боеприпасом для некоторых кустарных видов оружия.</Ammo_Balls.description>
+
+  <Ammo_Balls_RU.label>15-миллиметровые резиновые шарики</Ammo_Balls_RU.label>
+  <Ammo_Balls_RU.description>Стальные шарики покрытые слоем толстой резины,очень распространены для разгона толпы и нелетального выведения из строя особо буйных.</Ammo_Balls_RU.description>
 
   <Ammo_Balls_YA.label>15-миллиметровые стальные шарики облучённые ядаритом</Ammo_Balls_YA.label>
   <Ammo_Balls_YA.description>Шарики что были подверженны сильному излучению от концентрированого Ядарита.Увеличенная пробивная способность а также высокая токсичность боеприпасов делают даже пневматичискую винтовку очень грозным оружием.После облучения масса снаряда значительно изменяется , снаряд окутывает свечение Ядарита .Попадение снаряда может уничтожить экипировку!!!</Ammo_Balls_YA.description>
@@ -14,6 +17,7 @@
 
   <Balls.label>15-миллиметровые стальные шарики</Balls.label>
   <Balls_YA.label>15-миллиметровые стальные шарики облучённые ядаритом</Balls_YA.label>
+  <Balls_RU.label>15-миллиметровые резиновые шарики</Balls_RU.label>
 
 
 </LanguageData>
